[gd_scene load_steps=2 format=2]

[ext_resource path="res://demo/shared/JoyName.gd" type="Script" id=1]

[node name="JoyName" type="GridContainer" groups=["JOY_HW_INFO"]]
columns = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="led" type="ColorRect" parent="."]
margin_right = 8.0
margin_bottom = 40.0
rect_min_size = Vector2( 8, 40 )
color = Color( 0.0941176, 0.215686, 0.0862745, 1 )

[node name="btnUse" type="Button" parent="."]
margin_left = 12.0
margin_right = 49.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Use"

[node name="btnRemap" type="Button" parent="."]
margin_left = 53.0
margin_right = 109.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Remap"

[node name="lblName" type="Label" parent="."]
margin_left = 113.0
margin_top = 13.0
margin_right = 125.0
margin_bottom = 27.0
text = "..."

[node name="lblID" type="Label" parent="."]
margin_left = 129.0
margin_top = 13.0
margin_right = 141.0
margin_bottom = 27.0
text = "..."

[connection signal="pressed" from="btnUse" to="." method="_on_btnUse_pressed"]
[connection signal="pressed" from="btnRemap" to="." method="_on_btnRemap_pressed"]
